--- a/utils/index.html
+++ b/utils/index.html
@@ -107,11 +107,45 @@
         <p class="subtitle">檔案存取許可。以下為工具清單。</p>
         <ul class="app-list">
             <li class="app-item">
+                <!-- 單位轉換器 -->
                 <a href="https://your-unit-converter-app.pages.dev" class="app-link">
                     <div class="link-text">
                         <h2 class="text-xl font-bold">單位轉換器</h2>
                         <p class="text-sm mt-1">
                             快速轉換唔同單位嘅工具。
+                        </p>
+                    </div>
+                </a>
+            </li>
+            <li class="app-item">
+                <!-- 尺寸換算規格表 -->
+                <a href="https://gasizespec.pages.dev/" class="app-link">
+                    <div class="link-text">
+                        <h2 class="text-xl font-bold">尺寸換算規格表</h2>
+                        <p class="text-sm mt-1">
+                            根據指令、任務及戰術單位數據，用於查詢及換算全球服裝、鞋履尺寸的工具。
+                        </p>
+                    </div>
+                </a>
+            </li>
+            <li class="app-item">
+                <!-- Gemini Canvas 專案 -->
+                <a href="https://g.co/gemini/share/a7333daccbef" class="app-link">
+                    <div class="link-text">
+                        <h2 class="text-xl font-bold">NERV 任務指令翻譯器</h2>
+                        <p class="text-sm mt-1">
+                            用於解讀及翻譯來自全球各情報組織的任務指令，主要處理酒店預訂確認信格式。
+                        </p>
+                    </div>
+                </a>
+            </li>
+            <li class="app-item">
+                <!-- 港鐵到站時間工具 -->
+                <a href="https://mtr-af3.pages.dev/" class="app-link">
+                    <div class="link-text">
+                        <h2 class="text-xl font-bold">城市軌道動態追蹤器</h2>
+                        <p class="text-sm mt-1">
+                            實時監測及預測城市軌道交通列車到站時間，提升任務行動效率。
                         </p>
                     </div>
                 </a>
