--- a/media-tools/index.html
+++ b/media-tools/index.html
@@ -106,12 +106,24 @@
         <h1 class="title">圖像/影片工具</h1>
         <p class="subtitle">檔案存取許可。以下為多媒體工具清單。</p>
         <ul class="app-list">
+            <!-- 爆肌化圖片工具 -->
             <li class="app-item">
-                <a href="https://your-image-tool.pages.dev" class="app-link">
+                <a href="https://character-forge.pages.dev/" class="app-link">
                     <div class="link-text">
-                        <h2 class="text-xl font-bold">圖像壓縮工具</h2>
+                        <h2 class="text-xl font-bold">同步率增幅圖像處理器</h2>
                         <p class="text-sm mt-1">
-                            縮減圖像檔案大小。
+                            將目標圖像的主體形態，轉換為最佳同步率狀態下具備的強化肉身結構。
+                        </p>
+                    </div>
+                </a>
+            </li>
+            <!-- 萬物皆 Jojo 化工具 -->
+            <li class="app-item">
+                <a href="https://jojo-6et.pages.dev/" class="app-link">
+                    <div class="link-text">
+                        <h2 class="text-xl font-bold">替身能力圖像編輯器</h2>
+                        <p class="text-sm mt-1">
+                            運用替身能力，將任何圖像注入 JOJO 風格，呈現極具動感的視覺效果。
                         </p>
                     </div>
                 </a>
